--- a/playground/client.html
+++ b/playground/client.html
@@ -21,7 +21,7 @@
 <body>
     <canvas id="screen" width="10" height="10"></canvas>
 
-    <script src="./client.js"></script>
+    <script src="./client.js" type="module"></script>
 </body>
 
 </html>
