Add specific css file for styling

--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiplayer Square Game</title>
 
-    <style>
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            width: 100vw;
-            height: 100vh;
-        }
-
-        #screen {
-            border: 10px solid #CCC;
-            image-rendering: pixelated;
-            image-rendering: crisp-edges;
-            image-rendering: -moz-crisp-edges;
-
-            width: 500px;
-            height: 500px;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/main.css">
     <script src="/socket.io/socket.io.js"></script>
 </head>
 
