Add main font family

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiplayer Square Game</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="/socket.io/socket.io.js"></script>
 </head>
@@ -74,7 +75,6 @@
         socket.on('remove-fruit', command => {
             game.removeFruit(command);
         });
-
     </script>
 </body>
 
