Add ranking elements

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,14 @@
 </head>
 
 <body>
-    <canvas id="screen"></canvas>
+    <main>
+        <canvas id="screen"></canvas>
+        <div id="ranking-container">
+            <h2 id="ranking-title">Ranking</h2>
+            <div id="separator"></div>
+            <ul id="ranking-ul"></ul>
+        </div>
+    </main>
 
     <script type="module">
 
