--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Multiplayer Square Game</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles/main.css">
     <script src="/socket.io/socket.io.js"></script>
 </head>
@@ -25,18 +26,21 @@
 
         import createKeyboardListener from './keyboardListener.js';
         import createGame from './game.js';
-        import renderScreen from './renderScreen.js';
+        import createScreenManager from './screenManager.js';
 
         const game = createGame();
         const keyboardListener = createKeyboardListener(document);
+        const screen = document.getElementById('screen');
 
         const socket = io();
 
-        const screen = document.getElementById('screen');
+        const screenManager = createScreenManager({
+            document, screen, game, requestAnimationFrame
+        });
 
         socket.on('connect', command => {
             const playerId = socket.id;
-            renderScreen(screen, game, requestAnimationFrame, playerId);
+            screenManager.renderGameScreen(playerId);
         });
 
         socket.on('disconnect', () => {
@@ -57,14 +61,18 @@
             keyboardListener.subscribe( command => {
                 socket.emit(command.type, command);
             });
+
+            screenManager.renderRanking();
         });
 
         socket.on('add-player', command => {
             game.addPlayer(command);
+            screenManager.renderRanking();
         });
 
         socket.on('remove-player', command => {
             game.removePlayer(command);
+            screenManager.renderRanking();
         });
 
         socket.on('move-player', command => {
@@ -82,6 +90,9 @@
         socket.on('remove-fruit', command => {
             game.removeFruit(command);
         });
+
+        socket.on('update-ranking', screenManager.renderRanking)
+
     </script>
 </body>
 
